[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/tests/TestNetworking.gd" type="Script" id=1]
[ext_resource path="res://scenes/common/ChaseCamera.tscn" type="PackedScene" id=2]

[node name="TestNetworking" type="Spatial"]
script = ExtResource( 1 )

[node name="ChaseCamera" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.93136, 0.14953, -0.331976, 0, 0.911777, 0.410685, 0.364098, -0.382496, 0.849193, -3.3439, 4.1367, 8.55366 )
near = 0.5

[node name="GUI" type="MarginContainer" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="HBoxContainer" parent="GUI"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1260.0
margin_bottom = 700.0
custom_constants/separation = 8

[node name="Client" type="Button" parent="GUI/Container"]
margin_right = 408.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Client"

[node name="Server" type="Button" parent="GUI/Container"]
margin_left = 416.0
margin_right = 824.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Server"

[node name="ListenServer" type="Button" parent="GUI/Container"]
margin_left = 832.0
margin_right = 1240.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Listen server"
